I've made some changes from home

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 	</title>
 </head>
 <body>
-	<h1>git</h1>
+	<h1>git</h1>	
+	<p>
+	you only need to clone once
+
+	direct to where you want to copy to.
+
+	git clone + URL
+	</p>
 
 </body>
 </html>
